--- a/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
+++ b/AC3.2-GameOfThrones/Base.lproj/Main.storyboard
@@ -25,18 +25,18 @@
                                 <rect key="frame" x="0.0" y="136" width="375" height="46"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Gzx-2j-BOY" id="jys-lM-aJJ">
-                                    <frame key="frameInset" width="375" height="45.5"/>
+                                    <frame key="frameInset" width="375" height="45"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="j3c-K6-c5T">
-                                            <frame key="frameInset" minX="15" minY="6" width="33.5" height="20.5"/>
+                                            <frame key="frameInset" minX="15" minY="5" width="34" height="21"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="0.0"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" text="Detail" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="sjE-LG-s4K">
-                                            <frame key="frameInset" minX="15" minY="26.5" width="33" height="14.5"/>
+                                            <frame key="frameInset" minX="15" minY="26" width="33" height="15"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                             <nil key="textColor"/>
@@ -45,7 +45,7 @@
                                     </subviews>
                                 </tableViewCellContentView>
                                 <connections>
-                                    <segue destination="aiI-RL-mT3" kind="show" id="n4W-Eh-zBF"/>
+                                    <segue destination="aiI-RL-mT3" kind="show" identifier="episodeSegue" id="n4W-Eh-zBF"/>
                                 </connections>
                             </tableViewCell>
                         </prototypes>
@@ -67,7 +67,7 @@
         <!--Episode Deets-->
         <scene sceneID="y0S-UY-zHZ">
             <objects>
-                <viewController id="aiI-RL-mT3" userLabel="Episode Deets" sceneMemberID="viewController">
+                <viewController id="aiI-RL-mT3" userLabel="Episode Deets" customClass="EpisodeDeetsController" customModule="AC3_2_GameOfThrones" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Fjb-oL-Goo"/>
                         <viewControllerLayoutGuide type="bottom" id="bM1-41-ZjV"/>
@@ -76,13 +76,12 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" alpha="0.25" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="mr3-ab-0c2">
-                                <frame key="frameInset" minX="16" minY="72" width="343" height="575"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" red="0.13684797286987305" green="0.77443379163742065" blue="0.65935736894607544" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            <imageView userInteractionEnabled="NO" alpha="0.25" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="mr3-ab-0c2">
+                                <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sharp Chair" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HPh-Ab-sIZ">
-                                <fontDescription key="fontDescription" name="Baskerville-BoldItalic" family="Baskerville" pointSize="24"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sharp Chair" lineBreakMode="wordWrap" numberOfLines="2" baselineAdjustment="alignBaselines" minimumFontSize="12" adjustsLetterSpacingToFitWidth="YES" translatesAutoresizingMaskIntoConstraints="NO" id="HPh-Ab-sIZ">
+                                <color key="backgroundColor" red="0.89298689365386963" green="0.8929867148399353" blue="0.89298677444458008" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <fontDescription key="fontDescription" name="Baskerville-BoldItalic" family="Baskerville" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -110,9 +109,8 @@
                                     <constraint firstItem="bnI-bV-YfY" firstAttribute="leading" secondItem="Moq-X4-G0V" secondAttribute="trailing" constant="5" id="v5V-Lp-OkP"/>
                                 </constraints>
                             </stackView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="Summary" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jmd-Qa-qf9">
-                                <frame key="frameInset" minX="16" minY="142" width="343" height="277"/>
-                                <fontDescription key="fontDescription" name="Baskerville-SemiBold" family="Baskerville" pointSize="20"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Summary" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jmd-Qa-qf9">
+                                <fontDescription key="fontDescription" name="Baskerville" family="Baskerville" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
@@ -120,19 +118,31 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="bM1-41-ZjV" firstAttribute="top" secondItem="MLu-D3-Oi6" secondAttribute="bottom" constant="533" id="13j-hP-YvF"/>
-                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="trailing" secondItem="XTv-d7-mKB" secondAttribute="trailingMargin" constant="8" id="2BP-GE-aiM"/>
-                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="top" secondItem="MLu-D3-Oi6" secondAttribute="bottom" constant="8" id="4su-90-ybR"/>
-                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="leading" secondItem="XTv-d7-mKB" secondAttribute="leadingMargin" constant="8" id="Jsk-9j-CPd"/>
+                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="trailing" secondItem="mr3-ab-0c2" secondAttribute="trailing" id="F3g-yl-1N7"/>
+                            <constraint firstItem="bM1-41-ZjV" firstAttribute="top" secondItem="jmd-Qa-qf9" secondAttribute="bottom" constant="248" id="LEG-Bf-LUA"/>
                             <constraint firstItem="HPh-Ab-sIZ" firstAttribute="trailing" secondItem="XTv-d7-mKB" secondAttribute="trailingMargin" id="LaQ-Bx-Yvg"/>
+                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="leading" secondItem="MLu-D3-Oi6" secondAttribute="leading" id="Mae-Dx-2tf"/>
+                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="top" secondItem="MLu-D3-Oi6" secondAttribute="bottom" constant="8" symbolic="YES" id="OQH-AY-x6L"/>
                             <constraint firstItem="MLu-D3-Oi6" firstAttribute="top" secondItem="HPh-Ab-sIZ" secondAttribute="bottom" constant="8" id="SOG-p6-HhI"/>
                             <constraint firstItem="bM1-41-ZjV" firstAttribute="top" secondItem="MLu-D3-Oi6" secondAttribute="bottom" constant="533" id="UhK-37-9vb"/>
+                            <constraint firstItem="mr3-ab-0c2" firstAttribute="top" secondItem="HPh-Ab-sIZ" secondAttribute="top" id="XzI-QC-zdZ"/>
                             <constraint firstItem="HPh-Ab-sIZ" firstAttribute="top" secondItem="Fjb-oL-Goo" secondAttribute="bottom" constant="8" id="bWs-0O-8nj"/>
+                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="trailing" secondItem="HPh-Ab-sIZ" secondAttribute="trailing" id="d88-wP-ZRr"/>
                             <constraint firstItem="HPh-Ab-sIZ" firstAttribute="leading" secondItem="XTv-d7-mKB" secondAttribute="leadingMargin" id="gZL-Fb-vTT"/>
                             <constraint firstItem="MLu-D3-Oi6" firstAttribute="top" secondItem="HPh-Ab-sIZ" secondAttribute="bottom" constant="8" id="ixz-wO-9I4"/>
+                            <constraint firstItem="jmd-Qa-qf9" firstAttribute="leading" secondItem="mr3-ab-0c2" secondAttribute="leading" constant="8" id="nAv-Gd-yCa"/>
                             <constraint firstItem="bM1-41-ZjV" firstAttribute="top" secondItem="HPh-Ab-sIZ" secondAttribute="bottom" constant="561" id="sb9-dC-POw"/>
+                            <constraint firstAttribute="bottom" secondItem="mr3-ab-0c2" secondAttribute="bottom" constant="20" symbolic="YES" id="whX-MZ-PHn"/>
                             <constraint firstItem="MLu-D3-Oi6" firstAttribute="leading" secondItem="XTv-d7-mKB" secondAttribute="leadingMargin" id="zM8-LU-ABw"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="airdate" destination="bnI-bV-YfY" id="zZk-69-bym"/>
+                        <outlet property="episodeTitle" destination="HPh-Ab-sIZ" id="fqG-r2-Uwk"/>
+                        <outlet property="screenshot" destination="mr3-ab-0c2" id="bcT-Fd-mT4"/>
+                        <outlet property="seasonNumEpisodeNum" destination="Moq-X4-G0V" id="W7P-cO-YIv"/>
+                        <outlet property="summary" destination="jmd-Qa-qf9" id="ouN-ll-RlJ"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="W9r-sX-ZKV" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
